# V2BanditGUI

./: .env.example  .gitignore  CHANGELOG.md  DOCKER_README.md  README.md  UI_IMPROVEMENTS_SUMMARY.md  changelog.md  docker-compose.yml  improvement_plan.md  pyproject.toml  requirements.txt  todo.md
.cursor/rules/: memory-bank.md
app/: bandit_title_screen.py  config.py  main.py  mentor.py
app/data/: README.md  all_data.json  commands_data.json  geek_quotes.json  general_info.json  levels_info.json  models.py
docs/: sequenceDiagram.mmd  v0.1-Overview-Diagram.md  v0.1-Overview.drawio  v0.1-Project-Overview.mmd  v0.1-project_overview.md  v0.1.canvas
e2e/: test_title_screen.py
static/: index.html  styles.css
static/js/: mentor.js  terminal.js
